começo do css(mt ruim)

--- a/html/index.html
+++ b/html/index.html
@@ -7,21 +7,28 @@
     <title>Netbook</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     <main>
       <!-- Home / First page-->
 
-      <section>
-        <div>
-          <img src="../img/logo.svg" alt="Logo Netbook" />
-          <p><strong>Netbook</strong></p>
-          <button>Home</button>
-          <button>Community</button>
-          <button>Blog</button>
-          <button>Events</button>
+      <section class="home">
+        <header class="header">
+          <div class="logo">
+            <img src="../img/logo.svg" alt="Logo Netbook"/>
+            <p><strong>Netbook</strong></p>
+          </div>
+          <div class="botoes">
+            <a href="">Home</a>
+            <a href="">Community</a>
+            <a href="">Blog</a>
+            <a href="">Events</a>
+          </div>
           <button>Login</button>
-        </div>
+        </header>
 
         <div>
           <button>Netbook community</button>
@@ -46,7 +53,7 @@
 
       <!-- Sobre nós / Second page-->
 
-      <section>
+      <section class="about us">
         <div>
           <p>Whats Netbooks</p>
           <p><strong>Why Join to Netbook Social Network</strong></p>
@@ -80,7 +87,7 @@
 
       <!-- Avaliações / Third page-->
 
-      <section>
+      <section class="rating">
         <div>
           <p>4.8 <span>Rating</span></p>
           <img
@@ -122,7 +129,7 @@
 
       <!-- Comunidade / Fourth page-->
 
-      <section>
+      <section class="community">
         <div>
           <p>Our Community</p>
           <p><strong>Community Main Feature</strong></p>
@@ -199,7 +206,7 @@
 
       <!-- Membros / Fifth page-->
 
-      <section>
+      <section class="members">
         <div>
           <p>Valuable Team</p>
           <p><strong>Our Active Members</strong></p>
@@ -254,7 +261,7 @@
 
       <!-- Publicidade / Sixth page-->
 
-      <section>
+      <section class="publi">
         <div>
           <p>Get Our Aplication</p>
           <p><strong>You Can Easily Find This App…!</strong></p>
@@ -283,7 +290,7 @@
 
       <!-- Últimas notícias / Seventh page-->
 
-      <section>
+      <section class="break news">
         <div>
           <p>Get Our Aplication</p>
           <p><strong>Latest News</strong></p>
@@ -320,7 +327,7 @@
       <!-- Footer / Eight page -->
 
       <!-- Não tenho certeza se está correto utilizar assim o footer e se deve ser colocado sections junto a ele-->
-      <footer>
+      <footer class="footer">
         <div>
           <p><strong>Home</strong></p>
           <ul>
