--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,12 @@
     <title>Netbook</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../css/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
@@ -17,17 +20,19 @@
 
       <section class="home">
         <header class="header">
-          <div class="logo">
-            <img src="../img/logo.svg" alt="Logo Netbook"/>
+          <nav class="logo">
+            <img src="../img/logo.svg" alt="Logo Netbook" />
             <p><strong>Netbook</strong></p>
-          </div>
-          <div class="botoes">
-            <a href="">Home</a>
-            <a href="">Community</a>
-            <a href="">Blog</a>
-            <a href="">Events</a>
-          </div>
-          <button>Login</button>
+          </nav>
+          <nav class="botoes">
+            <ul>
+              <li>Home</li>
+              <li>Community</li>
+              <li>Blog</li>
+              <li>Events</li>
+            </ul>
+          </nav>
+          <nav><button>Login</button></nav>
         </header>
 
         <div>
@@ -266,7 +271,7 @@
           <p>Get Our Aplication</p>
           <p><strong>You Can Easily Find This App…!</strong></p>
           <p>
-            I say chap that’s suing lavatory chip shop gosh off his smashing
+            I say chap that's suing lavatory chip shop gosh off his smashing
             boot are you taking the piss posh loo brilliant.
           </p>
 
@@ -374,7 +379,7 @@
             Subscribe to be the first one to know about updates. Enter your
             email
           </p>
-          <!-- Colocar a barra que recebe o e-mail e faz a inscrição que não sei como fazer -->
+
         </div>
 
         <div>
@@ -384,6 +389,8 @@
             alt="Logo da Netbook - Footer/Oitava Página"
           />
           <p><strong>Netbook</strong></p>
+
+          <input type="email">
 
           <img
             src="../img/pg8/img-pg8-twitter.svg"
