--- a/html/index.html
+++ b/html/index.html
@@ -382,7 +382,7 @@
 
         </div>
 
-        <div>
+        <div class="bottomfooter">
           <p>Besnik Creative Agency.</p>
           <img
             src="../img/logo.svg"
@@ -403,7 +403,7 @@
           <img
             src="../img/pg8/img-pg8-facebook.svg"
             alt="Ícone Facebook - Footer/Oitava Página"
-          />[
+          />
           <img
             src="../img/pg8/img=pg8-linkedin.svg"
             alt="Ícone Linkedin - Footer/Oitava Página"
