--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,7 @@
       <section class="home">
         <header class="header">
           <nav class="logo">
-            <img src="../img/logo.svg" alt="Logo Netbook" />
-            <p><strong>Netbook</strong></p>
+            <img src="../img/logo-black.svg" alt="Logo Netbook" />
           </nav>
           <nav class="botoes">
             <ul>
@@ -285,7 +284,7 @@
           />
         </div>
 
-        <div>
+        <div class="smartphone">
           <img
             src="../img/pg6/img-pg6-smartphone.svg"
             alt="Imagem Smartphone - Publicidade/Sexta página"
@@ -379,18 +378,16 @@
             Subscribe to be the first one to know about updates. Enter your
             email
           </p>
-
         </div>
 
         <div class="bottomfooter">
           <p>Besnik Creative Agency.</p>
           <img
-            src="../img/logo.svg"
+            src="../img/logo-white.svg"
             alt="Logo da Netbook - Footer/Oitava Página"
           />
-          <p><strong>Netbook</strong></p>
 
-          <input type="email">
+          <input type="email" />
 
           <img
             src="../img/pg8/img-pg8-twitter.svg"
