--- a/html/index.html
+++ b/html/index.html
@@ -20,11 +20,8 @@
 
       <section class="home">
         <header class="header">
-          <nav class="logo">
-            <img src="../img/logo.svg" alt="Logo Netbook" />
-            <p><strong>Netbook</strong></p>
-          </nav>
-          <nav class="botoes">
+            <img src="../img/logo.svg" class="logo" alt="Logo Netbook" />
+          <nav class="nav">
             <ul>
               <li>Home</li>
               <li>Community</li>
