correção de cosias erradas

--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
 
       <section class="home">
         <header class="header">
-            <img src="../img/logo.svg" class="logo" alt="Logo Netbook" />
+            <img src="../img/logo-black.svg" class="logo" alt="Logo Netbook" />
           <nav class="nav">
             <ul>
               <li>Home</li>
