--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
         <div>
           <button>Netbook community</button>
 
-          <p><strong>Your Solutions For Community</strong></p>
+          <h1>Your Solutions For Community</h1>
           <p>
             More than 2 billion people in over countries use socibook to stay in
             touch with frieends & family
@@ -57,8 +57,8 @@
 
       <section class="about us">
         <div>
-          <p>Whats Netbooks</p>
-          <p><strong>Why Join to Netbook Social Network</strong></p>
+          <h2>Whats Netbooks</h2>
+          <h1>Why Join to Netbook Social Networ</h1>
           <p>
             Recent surveys have indicated that small businesses recognise the
             need they have to connect with consumer.
@@ -119,8 +119,8 @@
         </div>
 
         <div>
-          <p>Our achievement</p>
-          <p><strong>We are Connecting You The Digital Life.</strong></p>
+          <h2>Our achievement</h2>
+          <h1>We are Connecting You The Digital Life.</h1>
           <p>
             The scope the Social Media becomes crucial Is helps the business to
             directly engage with their needs and wants.
@@ -132,9 +132,9 @@
       <!-- Comunidade / Fourth page-->
 
       <section class="community">
-        <div>
-          <p>Our Community</p>
-          <p><strong>Community Main Feature</strong></p>
+        <div class="headcommunity">
+          <h2>Our Community</h2>
+          <h1>Community Main Feature</h1>
           <p>
             The wise man therefore always holds in these matters to this
             principle of selection.
@@ -209,9 +209,9 @@
       <!-- Membros / Fifth page-->
 
       <section class="members">
-        <div>
-          <p>Valuable Team</p>
-          <p><strong>Our Active Members</strong></p>
+        <div class="headmembers">
+          <h2>Valuable Team</h2>
+          <h1>Our Active Members</h1>
           <p>
             When an unknown printer took a galley of type and meeting fari
             scrambled it.
@@ -265,8 +265,8 @@
 
       <section class="publi">
         <div>
-          <p>Get Our Aplication</p>
-          <p><strong>You Can Easily Find This App…!</strong></p>
+          <h2>Get Our Aplication</h2>
+          <h1>You Can Easily Find This App…!</h1>
           <p>
             I say chap that's suing lavatory chip shop gosh off his smashing
             boot are you taking the piss posh loo brilliant.
@@ -292,43 +292,38 @@
 
       <!-- Últimas notícias / Seventh page-->
 
-      <section class="break news">
-        <div>
-          <p>Get Our Aplication</p>
-          <p><strong>Latest News</strong></p>
+      <section class="latest news">
+        <div class="headlatestnews">
+          <h2>Get Our Aplication</h2>
+          <h1>Latest News</h1>
         </div>
 
-        <div>
+        <div class="bodylatestnews">
           <img
             src="../img/pg7/img-pg7-notebook.svg"
             alt="Imagem Notebook - Últimas notícias/Sétima Página"
           />
           <p><strong>It Does Not Matter Hows Slowly go as Long</strong></p>
-          <p>Continue Reading</p>
-        </div>
+          <button>Continue Reading</button>
 
-        <div>
           <img
             src="../img/pg7/img-pg7-kid.svg"
             alt="Imagem Criança brincando com pai - Últimas notícias/Sétima Página"
           />
           <p><strong>Netbook Network Added New Photo Filter</strong></p>
-          <p>Continue Reading</p>
-        </div>
+          <button>Continue Reading</button>
 
-        <div>
           <img
             src="../img/pg7/img-pg7-peao.svg"
             alt="Imagem Peões coloridos - Últimas notícias/Sétima Página"
           />
           <p><strong>We Optimised Netbooks Better Navigation</strong></p>
-          <p>Continue Reading</p>
+          <button>Continue Reading</button>
         </div>
       </section>
 
       <!-- Footer / Eight page -->
 
-      <!-- Não tenho certeza se está correto utilizar assim o footer e se deve ser colocado sections junto a ele-->
       <footer class="footer">
         <div>
           <p><strong>Home</strong></p>
