--- a/html/index.html
+++ b/html/index.html
@@ -132,7 +132,7 @@
       <!-- Comunidade / Fourth page-->
 
       <section class="community">
-        <div class="headcommunity">
+        <div class="headgitcommunity">
           <h2>Our Community</h2>
           <h1>Community Main Feature</h1>
           <p>
