eu preciso dormirrrrr

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
         <div>
           <button>Netbook community</button>
 
-          <h1>Your Solutions For Community</h1>
+          <h1><strong>Your Solutions For Community</strong></h1>
           <p>
             More than 2 billion people in over countries use socibook to stay in
             touch with frieends & family
