algumas alterações, umas funcionam, outras não

--- a/html/index.html
+++ b/html/index.html
@@ -23,33 +23,35 @@
             <img src="../img/logo-black.svg" class="logo" alt="Logo Netbook" />
           <nav class="nav">
             <ul>
-              <li>Home</li>
+              <li><span> Home</span></li>
               <li>Community</li>
               <li>Blog</li>
               <li>Events</li>
             </ul>
           </nav>
-          <nav><button>Login</button></nav>
+          <button>Log in</button>
         </header>
 
-        <div>
-          <button>Netbook community</button>
+        <div class="content">
+          <div class="left">
+            <button class="b1">Netbook community</button>
 
-          <p><strong>Your Solutions For Community</strong></p>
-          <p>
-            More than 2 billion people in over countries use socibook to stay in
-            touch with frieends & family
-          </p>
+            <p><strong>Your Solutions For Community</strong></p>
+            <p>
+              More than 2 billion people in over countries use socibook to stay in
+              touch with frieends & family
+            </p>
 
-          <button>About More</button>
-          <button>Invite Friend</button>
-        </div>
+            <button class="b2">About More</button>
+            <button class="b3">Invite Friend</button>
+          </div>
 
-        <div>
-          <img
-            src="../img/pg1/img-pg1-dialogo.svg"
-            alt="Imagem Diálogo - Home/Primeira página"
-          />
+          <div class="right">
+            <img
+              src="../img/pg1/img-pg1-dialogo.svg"
+              alt="Imagem Diálogo - Home/Primeira página"
+            />
+          </div>
         </div>
       </section>
 
