Página sobre nós parcialmente pronta

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- declara o idioma usado na página para o navegador conseguir traduzir -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,298 +8,52 @@
     <title>Netbook</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="icon" href="img/Group.png" />
-    <!-- ícone que aparece na guia do navegador -->
+    <!-- ícone que aparece na guia da página no navegador -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Poppins:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap"
       rel="stylesheet"
     />
     <!-- link das fontes do google -->
   </head>
-
   <body>
-    <header class="header">
-      <div id="header-logo">
-        <a href="#"
-          ><img class="header-logo-img" src="img/Group.png" alt="Netbook"
-        /></a>
-        <div class="header-logo-text">
-          <a href="#">Netbook</a>
-        </div>
-      </div>
-      <nav class="header-navigation-menu">
+    <section class="about-us">
+      <article>
+        <h5 class="whats-netbooks">Whats Netbooks?</h5>
+        <h2>
+          Why Join to Netbook <br />
+          Social network?
+        </h2>
+        <p>
+          Recent surveys have indicated that small businesses <br />
+          recognise the need they have to connect with <br />
+          consumer.
+        </p>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Community</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Events</a></li>
+          <li>Groups</li>
+          <li>Messages</li>
+          <li>Share</li>
         </ul>
-      </nav>
-      <div class="button-box">
-        <a href="" class="log-in-button">Log in</a>
-      </div>
-    </header>
-
-    <main>
-      <section>
-        <div class="container">
-          <div class="colunas-iguais">
-            <div>
-              <button class="botao1">Netbook community</button>
-              <h1>Your Solutions For Community!</h1>
-              <p>
-                More than 2 billion people in over countries use socibook to
-                stay in touch with friends & family.
-              </p>
-              <button class="botao1x">About More</button>
-              <button class="botao1xx">Invite Friend</button>
-            </div>
-            <div>
-              <img src="img/Iamge.png" alt="Netbook" />
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="Sobre-nos">
-        <div class="container">
-          <div class="colunas-iguais">
-            <h3>Whats Netboks?</h3>
-            <h2>Why Join to Netbook Social Network?</h2>
-            <p>
-              Recent surveys have indicated that small businesses recognise the
-              need they have to connect with consumer.
-            </p>
-            <li>Groups</li>
-            <li>Messages</li>
-            <li>Share</li>
-            <img
-              src="img/pexels-andres-ayrton-6578391.png"
-              alt="Homem mexendo computador"
-            />
-            <img src="img/pexels-brett-sayles-2881232.png" alt="Cabos" />
-            <img
-              src="img/pexels-fauxels-3182834.png"
-              alt="Pessoas conversando"
-            />
-          </div>
-        </div>
-      </section>
-
-      <section class="Avaliacoes">
-        <div class="colunas-iguais">
-          <div>
-            <img src="img/Star.png" alt="Estrela Ranting" />
-            <h4>4.8 Rating</h4>
-            <img src="img/people.png" alt="Usuarios" />
-            <p>+836k Members</p>
-            <p>
-              More than 2 billion we people over countries use socibooks we to
-              stay in touch with friends.
-            </p>
-            <p>Join Our Community</p>
-          </div>
-
-          <div>
-            <img src="img/Trophy.png" alt="Trofeu" />
-            <h4>Awwwards</h4>
-            <img src="img/Ellipse 14.png" alt="Git icon" />
-            <p>Best of 2021 on Github</p>
-            <p>
-              More than 2 billion we people over countries use socibooks we to
-              stay in touch with friends.
-            </p>
-            <p>Go To Awards</p>
-          </div>
-
-          <div>
-            <h5>Our Achievement</h5>
-            <h3>We are Connecting You The Digital Life.</h3>
-            <p>
-              The scope the Social Media becomes crucial Is helps the business
-              to directly engage with their needs and wants.
-            </p>
-            <button class="botao2">Discover me</button>
-          </div>
-        </div>
-      </section>
-
-      <section class="Comunidade">
-        <div>
-          <h5>Our Community</h5>
-          <h1>Community Main Feature</h1>
-          <p>
-            The wise man therefore always holds in these matters to this
-            principle of selection.
-          </p>
-        </div>
-        <div class="colunas-iguais">
-          <li>
-            <img src="img/Icon.png" />
-            <h4>Members, Friends</h4>
-            <p>
-              Members, Friends Connection ( like followers ), Private Message
-            </p>
-          </li>
-          <li>
-            <img src="img/Icon(1).png" />
-            <h4>Forum</h4>
-            <p>
-              Forum is ready by BBPress. Your users can make topics and talk.
-            </p>
-          </li>
-          <li>
-            <img src="img/Icon(2).png" />
-            <h4>List Builder</h4>
-            <p>
-              Members, Groups list can be modified by drag & drop live builder.
-            </p>
-          </li>
-          <li>
-            <img src="img/Icon(3).png" />
-            <h4>Groups</h4>
-            <p>
-              Your users can create groups to let other users to join and talk
-            </p>
-          </li>
-          <li>
-            <img src="img/Icon(4).png" />
-            <h4>Custom Module</h4>
-            <p>
-              You can create Members, Groups Module. We already created 3
-              modules. It's by drag & drop live builder.
-            </p>
-          </li>
-          <li>
-            <img src="img/Icon(5).png" />
-            <h4>List Scroll Effects</h4>
-            <p>
-              8 different scroll effects are ready. You can always change by
-              your tastes.
-            </p>
-          </li>
-        </div>
-      </section>
-
-      <section class="Membros">
-        <div>
-          <h5>Valuable Team</h5>
-          <h1>Our Active Members</h1>
-          <p>
-            when an unknown printer took a galley of type and meeting fari
-            scrambled it.
-          </p>
-        </div>
-        <div class="buttons">
-          <button name="botao3x">Newest</button>
-          <button name="botao3xx">Popular</button>
-          <button name="botao3xxx">Active</button>
-        </div>
-
-        <div>
-          <img src="img/image 296.png" alt="Fahim Rahman" />
-          <h4>Fahim Rahman</h4>
-          <p>@rahman</p>
-          <img src="img/image 299.png" alt="Kazi Rahman" />
-          <h4>Kazi Rahman</h4>
-          <p>@Rahman</p>
-          <img src="img/image 298.png" alt="Masterero Ali" />
-          <h4>Masterero Ali</h4>
-          <p>@Master</p>
-          <img src="img/Check.png" alt="Alia Karon" />
-          <h4>Alia Karon</h4>
-          <p>@Alia</p>
-        </div>
-      </section>
-
-      <section class="Publicidade">
-        <div>
-          <h5>Get Our Aplication</h5>
-          <h1>You Can Easily Find This App…!</h1>
-          <p>
-            I say chap that’s suing lavatory chip shop gosh off his smashing
-            boot are you taking the piss posh loo brilliant.
-          </p>
-          <img src="img/image 288.png" alt="Apple Store" />
-          <img src="img/image 289.png" alt="App Store" />
-        </div>
-        <div>
-          <img src="img/mobile muckup.png" alt="Celular Tela Login" />
-        </div>
-      </section>
-
-      <section class="Ultimasnoticias">
-        <h5>Get Our Aplication</h5>
-        <h1>Latest News</h1>
+      </article>
+      <div class="about-us-images">
         <div>
           <img
-            src="img/pexels-meruyert-gonullu-6589064.png"
-            alt="Mão mexendo no laptop"
+            src="img/pexels-fauxels-3182834.png"
+            alt="Pessoas reunidas em uma mesa"
+          />
+        </div>
+        <div>
+          <img
+            src="img/pexels-andres-ayrton-6578391.png"
+            alt="Homem usando notebook"
           />
           <img
-            src="img/pexels-cottonbro-6140202.png"
-            alt="Pai e filha se divertindo no celular"
+            src="img/pexels-brett-sayles-2881232.png"
+            alt="Cabos de rede conectados a um hardware"
           />
-          <img src="img/pexels-pixabay-163064.png" alt="Bonecos de plástico" />
-        </div>
-        <div>
-          <h4>It Does Not Matter Hows Slowly go as Long</h4>
-          <h4>Netbook Network Added New Photo Filter</h4>
-          <h4>We Optimised Netbooks Better Navigation</h4>
-        </div>
-        <div>
-          <p>Continue Reading</p>
-          <p>Continue Reading</p>
-          <p>Continue Reading</p>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <div class="container">
-        <div class="colunas-iguais">
-          <div>
-            <li>Home</li>
-            <li>Resources</li>
-            <li>Community</li>
-            <li>Main Links</li>
-            <li>Subscribe Cirkle Newsletter</li>
-            <p>
-              Subscribe to be the first one to know about updates. Enter your
-              email
-            </p>
-            <input type="email" />
-            <button class="botao">Subscribe</button>
-          </div>
-
-          <div>
-            <li>Home</li>
-            <li>Community</li>
-            <li>Events</li>
-            <li>Contact</li>
-            <li>Blog</li>
-            <li>News</li>
-            <li>Guides</li>
-            <li>Help Center</li>
-            <li>NewsFeed</li>
-            <li>Profile</li>
-            <li>Friends</li>
-            <li>Forums</li>
-            <li>Members</li>
-            <li>Activity</li>
-            <li>Groups</li>
-            <li>Private Group</li>
-          </div>
         </div>
       </div>
-
-      <div>
-        <p>Besnik Creative Agency.</p>
-        <a href="#"><img src="img/Group.png" alt="Netbook" /></a>
-        <p>Netbook</p>
-        <img src="img/Social icon.png" alt="Icons Redes Sociais" />
-      </div>
-    </footer>
+    </section>
   </body>
 </html>
