--- a/html/index.html
+++ b/html/index.html
@@ -17,8 +17,7 @@
   <body>
     <main>
       <!-- Membros / Fifth page-->
-
-      <section class="members">
+      <section>
         <div class="headmembers">
           <h2>Valuable Team</h2>
           <h1>Our Active Members</h1>
@@ -28,53 +27,50 @@
           </p>
         </div>
 
-        <div>
+        <div class="buttonmembers">
           <button>Newest</button>
           <button>Popular</button>
           <button>Active</button>
         </div>
 
-        <div>
-          <img
-            src="../img/pg5/img-pg5-fahim.svg"
-            alt="Imagem Fahim - Membros/Quinta página"
-          />
-          <p><strong>Fahim Rahman</strong></p>
-          <p>@rahman</p>
-        </div>
-
-        <div>
-          <img
-            src="../img/pg5/img-pg5-kazi.svg"
-            alt="Imagem Kazi - Membros/Quinta página"
-          />
-          <p><strong>Kazi Rahman</strong></p>
-          <p>@Rahman</p>
-        </div>
-
-        <div>
-          <img
-            src="../img/pg5/img-pg5-masterero.svg"
-            alt="Imagem Masterero - Membros/Quinta página"
-          />
-          <p><strong>Masterero Ali</strong></p>
-          <p>@Master</p>
-        </div>
-
-        <div>
-          <img
-            src="../img/pg5/img-pg5-alia.svg"
-            alt="Imagem Alia - Membros/Quinta página"
-          />
-          <p><strong>Alia Karon</strong></p>
-          <p>@Alia</p>
+        <div class="imagesmembers">
+          <div>
+            <img
+              src="../img/Page5/img-pg5-fahim.svg"
+              alt="Imagem Fahim - Membros/Quinta página"
+            />
+            <p><strong>Fahim Rahman</strong></p>
+            <p>@rahman</p>
+          </div>
+          <div>
+            <img
+              src="../img/Page5/img-pg5-kazi.svg"
+              alt="Imagem Kazi - Membros/Quinta página"
+            />
+            <p><strong>Kazi Rahman</strong></p>
+            <p>@Rahman</p>
+          </div>
+          <div>
+            <img
+              src="../img/Page5/img-pg5-masterero.svg"
+              alt="Imagem Masterero - Membros/Quinta página"
+            />
+            <p><strong>Masterero Ali</strong></p>
+            <p>@Master</p>
+          </div>
+          <div>
+            <img
+              src="../img/Page5/img-pg5-alia.svg"
+              alt="Imagem Alia - Membros/Quinta página"
+            />
+            <p><strong>Alia Karon</strong></p>
+            <p>@Alia</p>
+          </div>
         </div>
       </section>
-
-      <!-- Publicidade / Sixth page-->
-
+      <!-- Publicidade / Sixth page -->
       <section class="publi">
-        <div>
+        <div class="textpubli">
           <h2>Get Our Aplication</h2>
           <h1>You Can Easily Find This App…!</h1>
           <p>
@@ -82,19 +78,21 @@
             boot are you taking the piss posh loo brilliant.
           </p>
 
-          <img
-            src="../img/pg6/img-pg6-applestore.svg"
-            alt="Imagem Apple Store - Publicidade/Sexta página"
-          />
-          <img
-            src="../img/pg6/img-pg6-playstore.svg"
-            alt="Imagem Play Store - Publicidade/Sexta página"
-          />
+          <div class="imgpubli">
+            <img
+              src="../img/Page6/img-pg6-applestore.svg"
+              alt="Imagem Apple Store - Publicidade/Sexta página"
+            />
+            <img
+              src="../img/Page6/img-pg6-playstore.svg"
+              alt="Imagem Play Store - Publicidade/Sexta página"
+            />
+          </div>
         </div>
 
-        <div class="smartphone">
+        <div class="phonepubli">
           <img
-            src="../img/pg6/img-pg6-smartphone.svg"
+            src="../img/Page6/img-pg6-smartphone.svg"
             alt="Imagem Smartphone - Publicidade/Sexta página"
           />
         </div>
