--- a/html/index.html
+++ b/html/index.html
@@ -33,8 +33,8 @@
           <button>Active</button>
         </div>
 
-        <div class="imagesmembers">
-          <div>
+        <div  class="imagesmembers">
+          <div class="imgmembers">
             <img
               src="../img/Page5/img-pg5-fahim.svg"
               alt="Imagem Fahim - Membros/Quinta página"
@@ -42,7 +42,7 @@
             <p><strong>Fahim Rahman</strong></p>
             <p>@rahman</p>
           </div>
-          <div>
+          <div class="imgmembers">
             <img
               src="../img/Page5/img-pg5-kazi.svg"
               alt="Imagem Kazi - Membros/Quinta página"
@@ -50,7 +50,7 @@
             <p><strong>Kazi Rahman</strong></p>
             <p>@Rahman</p>
           </div>
-          <div>
+          <div class="imgmembers">
             <img
               src="../img/Page5/img-pg5-masterero.svg"
               alt="Imagem Masterero - Membros/Quinta página"
@@ -58,7 +58,7 @@
             <p><strong>Masterero Ali</strong></p>
             <p>@Master</p>
           </div>
-          <div>
+          <div class="imgmembers">
             <img
               src="../img/Page5/img-pg5-alia.svg"
               alt="Imagem Alia - Membros/Quinta página"
