Página sobre-nós parcialmente pronta

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <section class="about-us">
-      <article>
+      <article class="about-us-article">
         <h5 class="whats-netbooks">Whats Netbooks?</h5>
         <h2>
           Why Join to Netbook <br />
@@ -36,18 +36,14 @@
           <li>Share</li>
         </ul>
       </article>
-      <div class="about-us-images">
-        <img
-          src="img/pexels-fauxels-3182834.png"
-          alt="Pessoas reunidas em uma mesa"
-        />
-        <img
-          src="img/pexels-andres-ayrton-6578391.png"
-          alt="Homem usando notebook"
-        />
-        <div>
+      <div class="about-us-big-images">
+        <img src="img/Image (1).png" alt="Pessoas reunidas em uma mesa" />
+      </div>
+      <div class="small-image1">
+        <img src="img/Image (2).png" alt="Homem usando notebook" />
+        <div class="small-image2">
           <img
-            src="img/pexels-brett-sayles-2881232.png"
+            src="img/Image (3).png"
             alt="Cabos de rede conectados a um hardware"
           />
         </div>
