Página Sobre-nós parcialmente pronta 2

--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
   <body>
     <section class="about-us">
       <article class="about-us-article">
-        <h5 class="whats-netbooks">Whats Netbooks?</h5>
-        <h2>
+        <h5 class="inter-h5-title">Whats Netbooks?</h5>
+        <h2 class="inter-h2-title">
           Why Join to Netbook <br />
           Social network?
         </h2>
-        <p>
+        <p class="inter-p">
           Recent surveys have indicated that small businesses <br />
           recognise the need they have to connect with <br />
           consumer.
         </p>
-        <ul>
-          <li>Groups</li>
+        <ul class="about-us-list">
+          <li>
+            <div class="inside-circle"></div>
+            Groups
+          </li>
           <li>Messages</li>
           <li>Share</li>
         </ul>
