--- a/html/index.html
+++ b/html/index.html
@@ -33,13 +33,13 @@
           <button>Active</button>
         </div>
 
-        <div  class="imagesmembers">
+        <div class="imagesmembers">
           <div class="imgmembers">
             <img
               src="../img/Page5/img-pg5-fahim.svg"
               alt="Imagem Fahim - Membros/Quinta página"
             />
-            <p><strong>Fahim Rahman</strong></p>
+            <h2>Fahim Rahman</h2>
             <p>@rahman</p>
           </div>
           <div class="imgmembers">
@@ -47,7 +47,7 @@
               src="../img/Page5/img-pg5-kazi.svg"
               alt="Imagem Kazi - Membros/Quinta página"
             />
-            <p><strong>Kazi Rahman</strong></p>
+            <h2>Kazi Rahman</h2>
             <p>@Rahman</p>
           </div>
           <div class="imgmembers">
@@ -55,7 +55,7 @@
               src="../img/Page5/img-pg5-masterero.svg"
               alt="Imagem Masterero - Membros/Quinta página"
             />
-            <p><strong>Masterero Ali</strong></p>
+            <h2>Masterero Ali</h2>
             <p>@Master</p>
           </div>
           <div class="imgmembers">
@@ -63,20 +63,22 @@
               src="../img/Page5/img-pg5-alia.svg"
               alt="Imagem Alia - Membros/Quinta página"
             />
-            <p><strong>Alia Karon</strong></p>
+            <h2>Alia Karon</h2>
             <p>@Alia</p>
           </div>
         </div>
       </section>
       <!-- Publicidade / Sixth page -->
       <section class="publi">
-        <div class="textpubli">
-          <h2>Get Our Aplication</h2>
-          <h1>You Can Easily Find This App…!</h1>
-          <p>
-            I say chap that's suing lavatory chip shop gosh off his smashing
-            boot are you taking the piss posh loo brilliant.
-          </p>
+        <div class="leftsidepubli">
+          <div class="textpubli">
+            <h2>Get Our Aplication</h2>
+            <h1>You Can Easily Find This App…!</h1>
+            <p>
+              I say chap that's suing lavatory chip shop gosh off his smashing
+              boot are you taking the piss posh loo brilliant.
+            </p>
+          </div>
 
           <div class="imgpubli">
             <img
