--- a/html/index.html
+++ b/html/index.html
@@ -84,10 +84,12 @@
             <img
               src="../img/Page6/img-pg6-applestore.svg"
               alt="Imagem Apple Store - Publicidade/Sexta página"
+              class="applestorepubli"
             />
             <img
               src="../img/Page6/img-pg6-playstore.svg"
               alt="Imagem Play Store - Publicidade/Sexta página"
+              class="playstorepubli"
             />
           </div>
         </div>
