Página Sobre-nós pronta

--- a/index.html
+++ b/index.html
@@ -32,11 +32,20 @@
         </p>
         <ul class="about-us-list">
           <li>
+            <div class="outside-circle"></div>
             <div class="inside-circle"></div>
             Groups
           </li>
-          <li>Messages</li>
-          <li>Share</li>
+          <li>
+            <div class="outside-circle"></div>
+            <div class="inside-circle"></div>
+            Messages
+          </li>
+          <li>
+            <div class="outside-circle"></div>
+            <div class="inside-circle"></div>
+            Share
+          </li>
         </ul>
       </article>
       <div class="about-us-big-images">
