Página avaliações parcialmente pronta #1

--- a/index.html
+++ b/index.html
@@ -61,5 +61,31 @@
         </div>
       </div>
     </section>
+    <section id="avaliations">
+      <article class="card-1">
+        <div class="star-rating">
+          <img
+            class="blue-star"
+            src="img/Star.png"
+            alt="Ícone de estrela azul"
+          />
+          <p class="inter-500-20px">4.8 Rating</p>
+        </div>
+        <div class="star-rating">
+          <img src="img/people.png" alt="fotos de três pessoas" />
+          <p class="inter-500-16px">
+            <span class="inter-600-16px">+838k</span> Members
+          </p>
+        </div>
+        <p class="inter-400-16px">
+          More than 2 billion we people over <br />
+          countries use socibooks we to stay <br />
+          in touch with friends.
+        </p>
+        <a class="inter-500-16px-2" href="">Join Our Community</a>
+      </article>
+      <article></article>
+      <article></article>
+    </section>
   </body>
 </html>
