--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
     <section id="avaliations">
       <article class="card-1">
-        <div class="star-rating">
+        <div class="rating-members">
           <img
             class="blue-star"
             src="img/Star.png"
@@ -71,7 +71,7 @@
           />
           <p class="inter-500-20px">4.8 Rating</p>
         </div>
-        <div class="star-rating">
+        <div class="rating-members">
           <img src="img/people.png" alt="fotos de três pessoas" />
           <p class="inter-500-16px">
             <span class="inter-600-16px">+838k</span> Members
@@ -84,8 +84,45 @@
         </p>
         <a class="inter-500-16px-2" href="">Join Our Community</a>
       </article>
-      <article></article>
-      <article></article>
+      <article class="card-2">
+        <div class="rating-members">
+          <img
+            class="blue-star"
+            src="img/Trophy.png"
+            alt="Ícone de troféu azul"
+          />
+          <p class="inter-500-20px">Awwwards</p>
+        </div>
+        <div class="rating-members">
+          <img src="img/Ellipse 14.png" alt="ícone do site Github" />
+          <p class="inter-500-16px">
+            Best of <span class="inter-600-16px">2021</span> on Github
+          </p>
+        </div>
+        <p class="inter-400-16px">
+          More than 2 billion we people over <br />
+          countries use socibooks we to stay <br />
+          in touch with friends.
+        </p>
+        <a class="inter-500-16px-2" href="">Go to Awards</a>
+      </article>
+      <article class="our-achievment">
+        <h5 class="inter-h5-title">Our Achievment</h5>
+        <h2 class="inter-h2-title">
+          We are Connecting <br />
+          You The Digital Life.
+        </h2>
+        <p class="inter-400-16px-2">
+          The scope the Social Media becomes crucial Is <br />
+          helps the business to directly engage with their <br />
+          needs and wants.
+        </p>
+        <a href="">
+          <div class="discover-me-button">
+            <p class="inter-500-14px" href="">Discover-me</p>
+          </div>
+        </a>
+      </article>
     </section>
   </body>
 </html>
