Arrumando essa nhaca

--- a/html/index.html
+++ b/html/index.html
@@ -294,114 +294,66 @@
 
       <!-- Últimas notícias / Seventh page-->
 
-      <section class="latest news">
-        <div class="headlatestnews">
-          <h2>Get Our Aplication</h2>
-          <h1>Latest News</h1>
+      <section class="breaknews">
+        <div class="texto_inicial">
+            <a href="#">Get Our Aplication</a>
+            <h2>Lastest News</h2>
         </div>
+        <div class="fotosbn">
+            <div class="fotobn1">
+                <img src="../img/fotobn_1.svg" alt="fotobn_1">
+                <h3 class="fotosbn_text"><br>It Does Not Matter Hows <br>
+                     Slowly go as Long</h3><br>
 
-        <div class="bodylatestnews">
-          <img
-            src="../img/pg7/img-pg7-notebook.svg"
-            alt="Imagem Notebook - Últimas notícias/Sétima Página"
-          />
-          <p><strong>It Does Not Matter Hows Slowly go as Long</strong></p>
-          <button>Continue Reading</button>
+                <a href="#">Continue Reading <i class="flecha"></i></a>
+            </div>
+                <div class="fotobn2">
+                <img src="../img/fotobn_2.svg" alt="fotobn_2">
+                <h3 class="fotosbn_text"><br>Netbook Network Added <br>
+                    New Photo Filter</h3><br>
 
-          <img
-            src="../img/pg7/img-pg7-kid.svg"
-            alt="Imagem Criança brincando com pai - Últimas notícias/Sétima Página"
-          />
-          <p><strong>Netbook Network Added New Photo Filter</strong></p>
-          <button>Continue Reading</button>
-
-          <img
-            src="../img/pg7/img-pg7-peao.svg"
-            alt="Imagem Peões coloridos - Últimas notícias/Sétima Página"
-          />
-          <p><strong>We Optimised Netbooks Better Navigation</strong></p>
-          <button>Continue Reading</button>
+                <a href="#">Continue Reading <i class="flecha"></i></a>
+            </div>
+            <div class="fotobn3">
+                <img src="../img/fotobn_3.svg" alt="fotobn_3">
+                <h3 class="fotosbn_text"><br>We Optimised Netbooks <br>
+                    Better Navigation</h3><br>
+                    
+                <a href="#">Continue Reading <i class="flecha"></i></a>
+                </div>
         </div>
-      </section>
-
-      <!-- Footer / Eight page -->
-
-      <footer class="footer">
-        <div>
-          <p><strong>Home</strong></p>
-          <ul>
-            <li>Home</li>
-            <li>Community</li>
-            <li>Events</li>
-            <li>Contact</li>
-          </ul>
+    </section>
+    <footer class="footer">
+        <div class="top_footer">
+            <div class="footer_home">
+                <h2>Home</h2>
+                <p><br><br>Home <br><br>Community <br><br>Events <br><br>Contact<br></p>
+            </div>
+            <div class="footer_resources">
+                <h2>Resources</h2>
+                <p><br><br>Blog <br><br>News <br><br>Guides <br><br>Help Center<br></p>
+            </div>
+            <div class="footer_community">
+                <h2>Community</h2>
+                <p><br><br>NewsFeed <br><br>Profile <br><br>Friends <br><br>Forums<br></p>
+            </div>
+            <div class="footer_main-links">
+                <h2>Main Links</h2>
+                <p><br><br>Members <br><br>Activity <br><br>Groups <br><br>Private Group<br></p>
+            </div>
+            <div class="footer_cirkle-newsletter">
+                <h2>Subscribe Cirkle <br>Newsletter</h2>
+                <p><br><br>Subscribe to be the first one to know <br> about updates. Enter your email<br><br></p>
+                <div class="submit"><input type="email" placeholder="E-mail Address"><button>Subscribe</button></div>
+            </div>  
+            
         </div>
-
-        <div>
-          <p><strong>Resources</strong></p>
-          <ul>
-            <li>Blog</li>
-            <li>News</li>
-            <li>Guides</li>
-            <li>Help Center</li>
-          </ul>
+        <div class="base">
+            <p>Besnik Creative Agency.</p>
+            <img src="../img/logo_branca.svg" alt="logo_branca">
+            <img src="../img/medias.svg" alt="medias">
         </div>
-
-        <div>
-          <p><strong>Community</strong></p>
-          <ul>
-            <li>NewsFeed</li>
-            <li>Profile</li>
-            <li>Friends</li>
-            <li>Forums</li>
-          </ul>
-        </div>
-
-        <div>
-          <p><strong>Main Links</strong></p>
-          <ul>
-            <li>Members</li>
-            <li>Activity</li>
-            <li>Groups</li>
-            <li>Private Group</li>
-          </ul>
-        </div>
-
-        <div>
-          <p><strong>Subscribe Circle Newsletter</strong></p>
-          <p>
-            Subscribe to be the first one to know about updates. Enter your
-            email
-          </p>
-        </div>
-
-        <div class="bottomfooter">
-          <p>Besnik Creative Agency.</p>
-          <img
-            src="../img/logo-white.svg"
-            alt="Logo da Netbook - Footer/Oitava Página"
-          />
-
-          <input type="email" />
-
-          <img
-            src="../img/pg8/img-pg8-twitter.svg"
-            alt="Ícone Twitter - Footer/Oitava Página"
-          />
-          <img
-            src="../img/pg8/img-pg8-instagram.svg"
-            alt="Ícone Instagram - Footer/Oitava Página"
-          />
-          <img
-            src="../img/pg8/img-pg8-facebook.svg"
-            alt="Ícone Facebook - Footer/Oitava Página"
-          />
-          <img
-            src="../img/pg8/img=pg8-linkedin.svg"
-            alt="Ícone Linkedin - Footer/Oitava Página"
-          />
-        </div>
-      </footer>
+    </footer>
     </main>
   </body>
 </html>
