--- a/html/index.html
+++ b/html/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  
+<html lang="pt-br">
   <head>
-    <link rel="stylesheet" href="/css/index.css" />
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netbook</title>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap"
-    rel="stylesheet"/>
-      </head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
   </head>
-</html>
   <body>
     <main>
       <!-- Home / First page-->
 
       <section class="home">
         <header class="header">
-            <img src="../img/logo-black.svg" class="logo" alt="Logo Netbook" />
+          <div class="initial-header">
+          <img src="../img/logo-black.svg" class="logo" alt="Logo Netbook" />
           <nav class="nav">
             <ul>
               <li><span> Home</span></li>
@@ -31,6 +30,7 @@
               <li>Events</li>
             </ul>
           </nav>
+        </div>
           <button>Log in</button>
         </header>
 
@@ -38,11 +38,11 @@
           <div class="left">
             <button class="b1">Netbook community</button>
 
-          <h1><strong>Your Solutions For Community</strong></h1>
-          <p>
-            More than 2 billion people in over countries use socibook to stay in
-            touch with frieends & family
-          </p>
+            <h1><strong>Your Solutions For Community</strong></h1>
+            <p>
+              More than 2 billion people in over countries use socibook<br> to stay
+              in touch with frieends & family
+            </p>
 
             <button class="b2">About More</button>
             <button class="b3">Invite Friend</button>
@@ -50,12 +50,13 @@
 
           <div class="right">
             <img
-              src="../img/pg1/img-pg1-dialogo.svg"
+              src="../img/img-pg1-dialogo.svg"
               alt="Imagem Diálogo - Home/Primeira página"
             />
           </div>
         </div>
       </section>
+
 
       <!-- Sobre nós / Second page-->
 
